--- a/SimpleCustomerApp/pom.xml
+++ b/SimpleCustomerApp/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <build>
     <!-- To define the plugin version in your parent POM -->
-  <modelVersion>4.0.0</modelVersion>
+  <!--<modelVersion>4.0.0</modelVersion>-->
   <groupId>com.javatpoint</groupId>
   <artifactId>SimpleCustomerApp</artifactId>
   <packaging>war</packaging>
