--- a/SimpleCustomerApp/pom.xml
+++ b/SimpleCustomerApp/pom.xml
@@ -9,7 +9,9 @@
   <version>2.0-SNAPSHOT</version>
   <name>SimpleCustomerApp</name>
   <url>http://maven.apache.org</url> 
-   <plugins>
+  </build>
+  <build>
+    <plugins>
     <plugin>
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-compiler-plugin</artifactId>
@@ -20,4 +22,5 @@
     </configuration>
     </plugin>
   <plugins>
+    </build>  
 </project>
