--- a/SimpleCustomerApp/pom.xml
+++ b/SimpleCustomerApp/pom.xml
@@ -18,6 +18,6 @@
      <target>${jdk.version}</target>
     </configuration>
     </plugin>
-  <plugins>
-    </build>  
+  </plugins>
+  </build>  
 </project>
