--- a/SimpleCustomerApp/pom.xml
+++ b/SimpleCustomerApp/pom.xml
@@ -18,6 +18,13 @@
      <target>${jdk.version}</target>
     </configuration>
     </plugin>
-  </plugins>
+    <plugin>
+    <artifactId>maven-war-plugin</artifactId>
+    <version>2.4</version>
+    <configuration>
+        <failOnMissingWebXml>false</failOnMissingWebXml>
+    </configuration>
+   </plugin>
+   </plugins>
   </build>  
 </project>
