--- a/SimpleCustomerApp/pom.xml
+++ b/SimpleCustomerApp/pom.xml
@@ -7,6 +7,18 @@
   <version>1.0-SNAPSHOT</version>
   <name>SimpleCustomerApp</name>
   <url>http://maven.apache.org</url> 
+	<distributionManagement>
+	    <repository>
+	      <id>nexus</id>
+	      <name>Releases Nexus Repository</name>
+	      <url>http://localhost:9090/repository/app-release/</url>
+	    </repository>
+	    <snapshotRepository>
+	      <id>nexus</id>
+	      <name>Snapshot Nexus Repository </name>
+	      <url>http://localhost:9090/repository/app-snapshot/</url>
+	    </snapshotRepository>   
+	</distributionManagement>
   <build>
     <plugins>
     <plugin>
